# fflas-ffpack-flint

./: .gitignore  CMakeLists.txt  Makefile  README.md  modular-flint.h  modular-flint.inl  test.cpp
bench/: Makefile  README.md  benchmark-pluq.C  rank.cpp
